# systemy-operacyjne

./: README.md
cw01/zad1/: BST.c  BST.h  CMakeLists.txt  list.c  list.h  person.c  person.h
cw01/zad2/: test.c
cw01/zad3a/: CMakeLists.txt  MOCK_DATA.csv  results.txt  test_dl.c
cw01/zad3b/: CMakeLists.txt  results.txt
cw01/zad4/: gdb.txt  test.c
cw02/zad1/: wyniki.txt  zad1.c
cw02/zad2/: zad2.c  zad2_ftw.c
cw02/zad3/: zad3.c
cw03/: CMakeLists.txt
cw03/zad1/: test.c  zad1.c
cw03/zad2/: test.c  zad2.c
cw04/: CMakeLists.txt
cw04/zad1/: zad1.c
cw04/zad2/: zad2.c
cw04/zad3/: zad3.c
cw05/: CMakeLists.txt
cw05/zad1/: zad1.c
cw05/zad2/: master.c  slave.c
cw06/zad1/: CMakeLists.txt  client.c  cs.h  server.c
cw06/zad2/: CMakeLists.txt  client.c  cs.h  server.c
cw07/zad1/: CMakeLists.txt  golibroda.c  golibroda.h  klient.c
cw07/zad2/: CMakeLists.txt  golibroda.c  klient.c
cw08/zad1/: CMakeLists.txt  generator.c  zad1a.c  zad1b.c  zad1c.c
cw08/zad2/: CMakeLists.txt  zad2.raport  zad2a.c  zad2b.c
cw09/zad1/: CMakeLists.txt  zad1a.c  zad1b.c
cw10/zad1/: CMakeLists.txt  client.c  server.c
cw10/zad2/: client.c  server.c
meminfo-project/: CMakeLists.txt  meminfo.c  meminfo.h  mydef.h
meminfo-project/doc/: index.html
meminfo-project/test/: CMakeLists.txt  mytest.c  program.c  program2.c
