cmake_minimum_required(VERSION 3.5)
project(test)

set(CMAKE_C_STANDARD 99)
include_directories(..)
link_directories(../cmake-build-debug/)

add_executable(mytest ./mytest)
target_link_libraries(mytest libmemproject.a)
target_link_libraries(mytest pthread)
target_link_libraries(mytest rt)
add_executable(program ./program)
target_link_libraries(program libmemproject.a)
target_link_libraries(program pthread)
target_link_libraries(program rt)
add_executable(program2 ./program2)
target_link_libraries(program2 libmemproject.a)
target_link_libraries(program2 pthread)
target_link_libraries(program2 rt)